# dogtor-ai

./: .env.example  .gitignore  .replit  BreedSelector-DELETE.tsx  cloudrun_deploy.sh  cookies.txt  database_setup.sql  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  splash-debug.html  tailwind.config.js  tailwind.config.ts  vercel.json
attached_assets/: Pasted--00-16-14-586-Running-build-in-Washington-D-C-USA-East-iad1-00-16-14-587-Build-machine-con-1756960439428_1756960439428.txt  Pasted--00-48-23-505-Running-build-in-Washington-D-C-USA-East-iad1-00-48-23-506-Build-machine-con-1756789013676_1756789013677.txt  Pasted--Ensure-folders-exist-mkdir-p-client-src-components-index-html-root-for-Vite-cat-client-ind-1755533447594_1755533447595.txt  Pasted--Replit-Build-Prompt-Dogtor-AI-Phase-1-MVP-with-Live-AI-Domain-hellodogtor-com-Brand-Dogtor--1755406227008_1755406227009.txt  Pasted--at-packageResolve-node-internal-modules-esm-resolve-768-81-at-moduleResolve-node-internal-1756533248586_1756533248586.txt  Pasted--const-navigate-useNavigate-const-cards-location-state-cards-const-handleNewDiagnosis-1755918275564_1755918275565.txt  Pasted-2025-09-03T17-36-43-815Z-error-error-there-is-no-unique-or-exclusion-constraint-matching-the-ON-C-1756921071253_1756921071253.txt  Pasted-4-23-7-97-MB-2-07-MB-0-616ms-Summary-URL-https-app-hellodogtor-com-api-history-list-Status-200-S-1757002144029_1757002144029.txt  Pasted-4-32-12-0-MB-3-97-MB-0-616ms-Summary-URL-https-app-hellodogtor-com-api-auth-user-Status-200-Sour-1757002270330_1757002270330.txt  (+14 more)
(+122 files in other folders)
